--- a/ios/Podfile
+++ b/ios/Podfile
@@ -83,6 +83,8 @@ target 'ShoppingList' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
   target 'ShoppingListTests' do
     inherit! :complete
     # Pods for testing
